objects/Unbilled_t_m__c/Unbilled_t_m__c.object-meta.xml
<CustomObject>
    <description>this object holds the reporting nsapshot for the unbilled T&amp;M - average report</description>
    <label>Unbilled t&amp;m</label>
    <nameField>
        <displayFormat>RSTM-{0000000}</displayFormat>
        <label>Unbilled t&amp;m Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unbilleds t&amp;m</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>