objects/Unbilled_t_m__c/fields/Average_t_M__c.field-meta.xml
<CustomField>
    <fullName>Average_t_M__c</fullName>
    <label>Average t&amp;M</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>