objects/Unbilled_t_m__c/fields/Bill_to_customer__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_customer__c</fullName>
    <label>Bill to customer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>