objects/Unbilled_t_m__c/fields/Mobile_t_M__c.field-meta.xml
<CustomField>
    <fullName>Mobile_t_M__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile t&amp;M</label>
    <type>Checkbox</type>
</CustomField>