objects/Unbilled_t_m__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <label>Service Center</label>
    <length>50</length>
    <type>Text</type>
</CustomField>