objects/Unbilled_t_m__c/fields/T_M_age__c.field-meta.xml
<CustomField>
    <fullName>T_M_age__c</fullName>
    <label>T&amp;M age</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>