objects/Unbilled_t_m__c/fields/T_M_created_by__c.field-meta.xml
<CustomField>
    <fullName>T_M_created_by__c</fullName>
    <label>T&amp;M created by</label>
    <length>200</length>
    <type>Text</type>
</CustomField>