objects/Unbilled_t_m__c/fields/T_M_created_date__c.field-meta.xml
<CustomField>
    <fullName>T_M_created_date__c</fullName>
    <label>T&amp;M created date</label>
    <type>Date</type>
</CustomField>