objects/Unbilled_t_m__c/fields/T_M_number__c.field-meta.xml
<CustomField>
    <fullName>T_M_number__c</fullName>
    <label>T&amp;M number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>